Revision history for Perl module Dist-Zilla-PluginBundle-Author-DOHERTY

{{$NEXT}}
    * Add SchwartzRatio plugin

0.26      2012-03-03
    * Produce README.mkdn
    * Actually accept push_to multiple times, as advertised

0.25      2012-01-17
    * Bump version prereq for my Pod Weaver pluginbundle - bugfixes

0.24      2011-12-15
    * Don't include dist.ini in the dist
    * Don't index corpus/
    * Don't include v in the version number
    * Don't use prereqs, just list them as prereqs

v0.23     2011-08-27
    * Also make GH URL point at metacpan
    * Make signed tags
    * Include -TRIAL on trial releases
    * Allow specifying the git remote to push to after release

0.021     2011-08-24
    * Fix documentation for enabling/disabling TestingMania tests
    * Require newer Dist::Zilla::Plugin::GitHub, which points metadata to parent forks on GH
    * Tweet URL to metacpan

0.020     2011-07-08
    * Also ship Build.PL

0.019     2011-05-09
    * Bump MinimumPerl version to scan only perl files
    * Add Clean plugin to run clean automatically after release
    * Renamed no_twitter to twitter

0.017     2011-04-19
    * Use goo.gl for URL shortening

0.016     2011-04-17
    * Update Github plugins
    * Remove TestingMania version prerequisite
    * Remove Repository/Bugtracker (covered by Github::Meta)

0.015     2011-04-02
    * Add support for specifying the changelog filename

0.014     2011-02-18
    * Attempt to use Git::Commit and Git::Push properly
    * Use OurPkgVersion instead of PkgVersion - much better
    * Require 0.0017 for ROKR's plugins - bugfixes

0.012     2011-02-06
    * Require D::Z::PB::TestingMania 0.003 for a better dep tree & PodLinkTests
    * Add CopyMakefilePLFromBuild

0.011     2011-01-24
    * Use new name for Pod::Weaver pluginbundle

0.010     2011-01-24
    * Renamed to Dist::Zilla::PluginBundle::Author::DOHERTY
    * Added support for using SurgicalPodWeaver via surgical in dist.ini