@@ -6,6 +6,7 @@ copyright_year      = 2010
 
 [@Author::DOHERTY]
 twitter = 0
+github = 0
 
 [Prereqs]
 Dist::Zilla::Plugin::CheckChangesHasContent = 0
